# ironflow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.claude/: settings.json
.claude/hooks/: protect-files.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.md  LUA_FLOW_GUIDE.md  NODE_CONTRIBUTING.md  NODE_REFERENCE.md  TODO.md
docs/nodes/: ai_chunk.md  ai_chunk_merge.md  ai_chunk_semantic.md  ai_embed.md  arangodb_aql.md  base64_decode.md  base64_encode.md  batch.md  cache_get.md  cache_set.md  code.md  copy_file.md  csv_parse.md  csv_stringify.md  data_filter.md  data_transform.md  date_format.md  db_exec.md  db_query.md  deduplicate.md  delay.md  delete_file.md  extract_html.md  extract_pdf.md  extract_pptx.md  extract_srt.md  extract_vtt.md  extract_word.md  foreach.md  hash.md  html_sanitize.md  html_to_markdown.md  http_delete.md  http_get.md  http_post.md  http_put.md  http_request.md  if_body_contains.md  if_http_status.md  if_node.md  (+58 more)
examples/: README.md  custom.env  hello.lua  ironflow.yaml  phase2_test.lua
examples/01-basics/: base64_globals.lua  context_passing.lua  environment_variables.lua  lua_globals.lua  parallel_execution.lua  retries_and_timeout.lua
examples/02-data-transforms/: csv_parse_stringify.lua  filter_and_batch.lua  foreach_function.lua  json_extract_path.lua  json_operations.lua  transform_pipeline.lua
examples/03-control-flow/: conditional_routing.lua  step_if.lua  switch_routing.lua
examples/04-file-operations/: binary_file_io.lua  copy_move_files.lua  read_write_files.lua  s3_copy.lua  s3_presign_url.lua  s3_put_get_list.lua  zip_workflow.lua
examples/05-http/: api_call.lua  authenticated_request.lua  http_methods.lua  if_body_contains.lua  if_http_status.lua  oauth_access_token.lua  oauth_access_token_form_encoded.lua  openai_chat_completions.lua  openai_responses.lua  openai_with_extract.lua  s3_presigned_upload.lua  status_inspection_retry.lua
examples/06-shell/: run_commands.lua
examples/07-advanced/: base64_encode_decode.lua  code_node_extract.lua  data_pipeline.lua  function_handler.lua  json_validate.lua  markdown_conversion.lua  schema_validation.lua
examples/08-extraction/: extract_html.lua  extract_pdf.lua  extract_pptx.lua  extract_srt.lua  extract_vtt.lua  extract_word.lua  image_convert.lua  image_crop.lua  image_flip.lua  image_grayscale.lua  image_metadata.lua  image_resize.lua  image_rotate.lua  image_to_pdf.lua  image_watermark.lua  pdf_merge.lua  pdf_metadata.lua  pdf_split.lua  pdf_thumbnail.lua  pdf_to_image.lua
examples/09-cache/: cache_context_keys.lua  cache_file.lua  cache_memory.lua
examples/10-database/: sqlite_crud.lua
examples/11-subworkflow/: basic_subworkflow.lua  fire_and_forget.lua  greet.lua  on_error_example.lua  parallel_subworkflows.lua
examples/12-arangodb/: aql_query.lua  aql_with_bind_vars.lua
examples/13-ai/: chunk_embed_openai_word.lua  chunk_fixed.lua  chunk_merge.lua  chunk_semantic.lua  chunk_split.lua  embed_oauth.lua  embed_ollama.lua  embed_openai.lua  embed_openai_from_ctx.lua  llm_azure_chat.lua  llm_gemini_chat.lua  llm_groq_chat.lua  llm_oauth_chat_completion.lua  llm_openai_chat.lua  llm_openai_function_tools.lua  llm_openai_response_format.lua  llm_openai_tool_subworkflow_dispatch.lua  llm_openai_tool_web_search.lua  oauth_chat_completion.lua  pdf_gemini_rag_schema.lua  pdf_gemini_reconstruct_schema.lua  pipeline_foreach_embed.lua  pptx_gemini_reconstruct.lua  pptx_gemini_reconstruct_schema.lua  semantic_chunks_embed.lua  tool_time_subworkflow.lua  tool_unknown_subworkflow.lua  tool_weather_subworkflow.lua  vtt_sentiment_analysis.lua  vtt_sentiment_analysis_compare.lua
examples/14-notifications/: send_email_resend.lua  send_email_smtp.lua  slack_notification.lua
examples/15-webhooks/: auth_check.lua  simple_webhook.lua
examples/16-s3vector/: s3vector_metadata_query.lua  (+6 more)
src/: lib.rs  main.rs
src/api/: errors.rs  (+2 more)
tests/: test_ai_chunk_nodes.rs  test_ai_nodes.rs  test_api.rs  test_arangodb_node.rs  test_cache_nodes.rs  test_config.rs  test_date_node.rs  test_db_nodes.rs  test_encoding_nodes.rs  test_engine.rs  test_event_store.rs  test_examples.rs  test_extract_nodes.rs  test_file_nodes.rs  test_foreach_node.rs  test_html_sanitize_node.rs  test_http_nodes.rs  test_image_util_nodes.rs  test_lua_limits.rs  test_lua_runtime.rs  test_mcp_nodes.rs  test_nodes.rs  test_parallel_subworkflows_node.rs  test_pdf_image_nodes.rs  test_pdf_merge_split_nodes.rs  test_redis_store.rs  test_s3_nodes.rs  test_s3vector_nodes.rs  test_send_email_node.rs  test_shell_markdown_nodes.rs  test_slack_notification_node.rs  test_state_stores.rs  test_subworkflow_node.rs  test_tool_dispatch_node.rs  test_types.rs  test_webhook.rs  test_xml_yaml_nodes.rs  test_yaml_nodes.rs
(+195 files in other folders)
